collabora/overlays/kind/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: collabora
  labels:
    pod-security.kubernetes.io/enforce: privileged
