collabora/overlays/kind/wopiserver-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: wopiserver
spec:
  parentRefs:
  - name: envoy-private
    namespace: envoy-gateway-system
    sectionName: https
  hostnames:
  - wopiserver.local
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: collaboration
      port: 80
